Curve Falloff Issue with Mask Painting for Flood Fill #42984

Closed
opened 2014-12-22 10:59:43 +01:00 by Leon Cheung · 15 comments
Member

System Information
Windows 8.1 64bit | GTX680

Blender Version
Broken: 2.72.3 071ec91

Short description of error
Some curve falloff preset doesn't work well with mask painting for flood fill.

Exact steps for others to reproduce the error
Please see this video . (P.S.: As tested, problematic typs are SMOOTH and SHARP)

Thank you.

plane_sculpt.blend

**System Information** Windows 8.1 64bit | GTX680 **Blender Version** Broken: 2.72.3 071ec91 **Short description of error** Some curve falloff preset doesn't work well with mask painting for flood fill. **Exact steps for others to reproduce the error** Please see [this video ](http://youtu.be/vj4JNIfeyiA). (P.S.: As tested, problematic typs are **SMOOTH** and **SHARP**) Thank you. [plane_sculpt.blend](https://archive.blender.org/developer/F133129/plane_sculpt.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-12-22 14:01:32 +01:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, can i put this one onto your list? :)

@Psy-Fi, can i put this one onto your list? :)

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

This is expected behaviour and is caused due to those brush falloffs not painting the vertices up to the threshold that cuts a face off from being subdivided. Also solid shading makes it difficult to see what is really happening here because it doesn't display the individual vertex masks (even though they still get used for the algorithm). To avoid that you can increase the brush strength beyond 1.0 (it's allowed if you type in the value) or use lasso/box selection.

This is expected behaviour and is caused due to those brush falloffs not painting the vertices up to the threshold that cuts a face off from being subdivided. Also solid shading makes it difficult to see what is really happening here because it doesn't display the individual vertex masks (even though they still get used for the algorithm). To avoid that you can increase the brush strength beyond 1.0 (it's allowed if you type in the value) or use lasso/box selection.
Author
Member

I can see it is expected. However, the algorithm for "Auto Handle" makes somewhere on the lower curve below zero, so when painting mask in Invert Mask mode (I mean first Alt M, then Ctrl I), a negative value contributes a positive influence (a very tiny one in the above case, for the default Smoothand Sharp curve preset), for Mask brush, this kind of opposite influence becomes more obvious.

curve.png

IMHO, solutions are:

  1. Improve algorithm for Auto Handle to avoid nagative value generated in interpolation segments;
  2. For Smoothand Sharp presets, Change the type of the bottom-right control point (x=1.00000, y=0.00000) from Auto Handle to "Vector Handle", which will solve this "annoying" influence in this case.
  3. Implement a clamp range for Mask brush, to force the valid value range from 0 to 1.

Btw, I've tried the two ways that you've suggested, "to incease brush strengh beyond 1.0" will not solve the problem in Invert Mask mode, but exaggerate it. As for the lasso/box selection, the back faces are also selected, even though the Front Faces Only is toggled (a possible bug?).

Please correct me if I'm wrong here. Thank you...

I can see it is expected. However, the algorithm for "Auto Handle" makes somewhere on the lower curve below zero, so when painting mask in **Invert Mask** mode (I mean first Alt M, then Ctrl I), a negative value contributes a positive influence (a very tiny one in the above case, for the default **Smooth**and **Sharp** curve preset), for Mask brush, this kind of opposite influence becomes more obvious. ![curve.png](https://archive.blender.org/developer/F134054/curve.png) IMHO, solutions are: 1. Improve algorithm for Auto Handle to avoid nagative value generated in interpolation segments; 2. For **Smooth**and **Sharp** presets, Change the type of the bottom-right control point (x=1.00000, y=0.00000) from **Auto Handle** to "Vector Handle", which will solve this "annoying" influence in this case. 3. Implement a clamp range for Mask brush, to force the valid value range from 0 to 1. Btw, I've tried the two ways that you've suggested, "to incease brush strengh beyond 1.0" will not solve the problem in Invert Mask mode, but exaggerate it. As for the lasso/box selection, the back faces are also selected, even though the **Front Faces Only** is toggled (a possible bug?). Please correct me if I'm wrong here. Thank you...

Unfortunately, box and lasso are meant to work like that too.

I agree about the clamping of the curve but I suspect it is a separate issue.

Unfortunately, box and lasso are meant to work like that too. I agree about the clamping of the curve but I suspect it is a separate issue.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Something looks fishy here indeed, I'll investigate better.

Something looks fishy here indeed, I'll investigate better.

Sorry for doubting you, the cause of the issue was exactly as you described. Fix coming to master.

Sorry for doubting you, the cause of the issue was exactly as you described. Fix coming to master.

This issue was referenced by a3e832e68b

This issue was referenced by a3e832e68b88ff9bea5aa14fdda867a1aaf6919e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a3e832e68b.

Closed by commit a3e832e68b.
Author
Member

Thanks a lot, Antony. Nice shot! :)

Thanks a lot, Antony. Nice shot! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42984
No description provided.